added new user config values for range finder

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -11,14 +11,13 @@ useLocaleDecimalPt = False
 
 [Configuration]
 SubPanel = 1    
-Parameter = 1    
+Parameter = 6    
 COMport = "COM9"
 Timeout = "10.000000"
 Baud = "115200"
 Version = #
 StopTelem = X
 StartUpDelay = 6.0
-
 
 [Setup]
 Type = Module
@@ -135,12 +134,13 @@ Z Dampening Proportional = 0.0
 Z Dampening Integral = 0.0
 Z Dampening Derivative = 0.0
 
-[Sensor Configuration]
+[Miscellaneous Configuration]
 Type = Parameters
 Command = E
 Telemetry = e
 Gyro Smooth Factor = 0.0
 Voltage Reference = 5
+Minimum Armed Throttle = 1150
 
 [Transmitter Smoothing]
 Type = Parameters
@@ -161,6 +161,7 @@ Telemetry = n
 Alarm Voltage = 10
 Throttle Target = 1450
 Going Down Time = 60000
+Battery Cell Count = 3
 
 [Camera Stabilization]
 Type = Parameters
