added tool tips for user definable parameters

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -11,7 +11,7 @@ useLocaleDecimalPt = False
 
 [Configuration]
 SubPanel = 1    
-Parameter = 6    
+Parameter = 0    
 COMport = "COM9"
 Timeout = "10.000000"
 Baud = "115200"
@@ -80,9 +80,9 @@ Path = Support\SubPanel\SerialMonitor\SerialMonitor.vi
 Type = Parameters
 Command = A
 Telemetry = a
-Roll Proportional = 0.0
+Roll Proportional = 0.0,test
 Roll Integral = 0.0
-Roll Derivative = 0.0
+Roll Derivative = 0.0,test2
 Pitch Proportional = 0.0
 Pitch Integral = 0.0
 Pitch Derivative = 0.0
@@ -115,7 +115,7 @@ Yaw Derivative = 0.0
 Heading Hold Proportional = 0.0
 Heading Hold Integral = 0.0
 Heading Hold Derivative = 0.0
-Heading Hold Config = 0
+Heading Hold Config = 0,Select 1 to enable, 0 to disable
 
 [Altitude Hold]
 Type = Parameters
