fixed max screen issue where controls are misplaced

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -10,9 +10,9 @@ DebugServerWaitOnLaunch = False
 useLocaleDecimalPt = False
 
 [Configuration]
-SubPanel = 1    
+SubPanel = 0    
 Parameter = 0    
-COMport = "COM9"
+COMport = "COM18"
 Timeout = "10.000000"
 Baud = "115200"
 Version = #
@@ -80,11 +80,11 @@ Path = Support\SubPanel\SerialMonitor\SerialMonitor.vi
 Type = Parameters
 Command = A
 Telemetry = a
-Roll Proportional = 0.0,test
+Roll Proportional = 0.0
 Roll Integral = 0.0
-Roll Derivative = 0.0,test2
+Roll Derivative = 0.0
 Pitch Proportional = 0.0
-Pitch Integral = 0.0
+Pitch Integral = 0.0,
 Pitch Derivative = 0.0
 
 [Attitude Mode]
@@ -197,8 +197,8 @@ Telemetry = i
 Plot 1 = Gyro Roll
 Plot 2 = Gyro Pitch
 Plot 3 = Gyro Yaw
-Plot 4 = Accel Roll
-Plot 5 = Accel Pitch
+Plot 4 = Accel Pitch
+Plot 5 = Accel Roll
 Plot 6 = Accel Z
 Plot 7 = Mag X
 Plot 8 = Mag Y
