copies source code to temp location and compiles, working on upload next, needs 328P debug for compilation

--- a/Source/Utilities/Uploader/AeroQuadUploader.ini
+++ b/Source/Utilities/Uploader/AeroQuadUploader.ini
@@ -1,6 +1,6 @@
 [Configuration]
 Arduino IDE Path = "/C/Development/arduino-1.0"
-Flight Software Path = "/Z/Ted On My Mac/GitHub/FlightSoftware"
+Flight Software Path = "/C/Development/FlightSoftware"
 Debug = TRUE    
 
 [Flight Board]
