--- a/Source/Utilities/Uploader/AeroQuadUploader.ini
+++ b/Source/Utilities/Uploader/AeroQuadUploader.ini
@@ -1,6 +1,6 @@
 [Configuration]
 Arduino IDE Path = "/C/Development/arduino-1.0"
-Flight Software Path = "/C/Development/FlightSoftware"
+Flight Software Path = "/Z/Ted On My Mac/GitHub/FlightSoftware"
 Debug = TRUE    
 
 [Flight Board]
@@ -43,6 +43,9 @@ AltitudeHoldRangeFinder = Altitude Hold - Range Finder,Select this to enable Max
 RateModeOnly = Rate Mode Only,Select this if you only have gyroscopes installed in your AeroQuad shield
 BattMonitor = Battery Monitor,Select this to enable the battery monitor software
 BattMonitorAutoDescent = Battery Monitor - Auto Descent,Select this to cause the auto descent feature when a low battery condition is detected. Requires the Battery Monitor feature to be enabled.
+BattCellCount 0 = Battery Monitor - Auto Detect LIPO Battery Cells,This auto detects number of cells in LIPO battery
+BattCellCount 3 = Battery Monitor - Battery has 3 cells,This defines 11.1V LIPO batteries
+BattCellCount 4 = Battery Monitor - Battery has 4 cells,This defines 14.6V LIPO batteries
 POWERED_BY_VIN = Battery Monitor - AeroQuad Shield Connected to VIN,Select this if you directly connect your battery to the VIN pin instead of the Arduino DC connector. Selecting this will provide more accurate voltage results for this particular configuration.
 RemotePCReceiver = Receive Pilot Commands from PC
 ReceiverPPM = Receiver PPM,Select this to use a PPM output from your R/C receiver. Connect this to pin XX on your Arduino.
@@ -69,31 +72,31 @@ feet = On Screen Display - Display Distance in Feet,Select to show distances in 
 OSD_SYSTEM_MENU = On Screen Display - OSD System Menu,Enable OSD system menu
 
 [Valid Flight Options]
-AeroQuad_Mini = FlightAngleMARG,FlightAngleARG,HeadingMagHold,RateModeOnly,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuad_v18 = FlightAngleARG,RateModeOnly,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuadMega_v2 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
+AeroQuad_Mini = FlightAngleMARG,FlightAngleARG,HeadingMagHold,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuad_v18 = FlightAngleARG,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuadMega_v2 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
 AeroQuad_v1 = FlightAngleARG,RateModeOnly,LASTCHANNEL 6
 AeroQuad_v1_IDG = FlightAngleARG,RateModeOnly,LASTCHANNEL 6
 AeroQuad_Wii = FlightAngleARG,RateModeOnly,LASTCHANNEL 6
 AeroQuad_Paris_v3 = FlightAngleARG,RateModeOnly,LASTCHANNEL 6
-AeroQuadMega_v1 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
-AeroQuadMega_v21 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
-AeroQuadMega_Wii = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
-ArduCopter = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
-AeroQuadMega_CHR6DM = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
-APM_OP_CHR6DM = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
+AeroQuadMega_v1 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
+AeroQuadMega_v21 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
+AeroQuadMega_Wii = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
+ArduCopter = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
+AeroQuadMega_CHR6DM = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
+APM_OP_CHR6DM = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
 
 [Default Flight Options]
-AeroQuad_Mini = FlightAngleARG,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuad_v18 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,RateModeOnly,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuadMega_v2 = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuad_Mini = FlightAngleARG,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuad_v18 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,RateModeOnly,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuadMega_v2 = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
 AeroQuad_v1 = FlightAngleARG,LASTCHANNEL 6
 AeroQuad_v1_IDG = FlightAngleARG,LASTCHANNEL 6
 AeroQuad_Wii = FlightAngleARG,LASTCHANNEL 6
 AeroQuad_Paris_v3 = FlightAngleARG,LASTCHANNEL 6
 AeroQuadMega_v1 = LASTCHANNEL 6
-AeroQuadMega_v21 = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuadMega_v21 = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
 AeroQuadMega_Wii = HeadingMagHold,AltitudeHoldBaro,LASTCHANNEL 6
-ArduCopter = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuadMega_CHR6DM = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
-APM_OP_CHR6DM = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattMonitorAutoDescent,LASTCHANNEL 6
+ArduCopter = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuadMega_CHR6DM = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
+APM_OP_CHR6DM = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
