--- a/Source/Utilities/Uploader/AeroQuadUploader.ini
+++ b/Source/Utilities/Uploader/AeroQuadUploader.ini
@@ -73,7 +73,7 @@ OSD_SYSTEM_MENU = On Screen Display - OSD System Menu,Enable OSD system menu
 
 [Valid Flight Options]
 AeroQuad_Mini = FlightAngleMARG,FlightAngleARG,HeadingMagHold,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuad_v18 = FlightAngleARG,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuad_v18 = FlightAngleARG,RateModeOnly,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,LASTCHANNEL 6
 AeroQuadMega_v2 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
 AeroQuad_v1 = FlightAngleARG,RateModeOnly,LASTCHANNEL 6
 AeroQuad_v1_IDG = FlightAngleARG,RateModeOnly,LASTCHANNEL 6
@@ -88,7 +88,7 @@ APM_OP_CHR6DM = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,A
 
 [Default Flight Options]
 AeroQuad_Mini = FlightAngleARG,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuad_v18 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,RateModeOnly,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuad_v18 = FlightAngleARG,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
 AeroQuadMega_v2 = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
 AeroQuad_v1 = FlightAngleARG,LASTCHANNEL 6
 AeroQuad_v1_IDG = FlightAngleARG,LASTCHANNEL 6
