GUI updates per Dpackham

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -12,14 +12,14 @@ useLocaleDecimalPt = False
 [Configuration]
 SubPanel = 6    
 Parameter = 0    
-COMport = "COM18"
+COMport = "COM8"
 Timeout = "10.000000"
 Baud = "115200"
 Version = #
 StopTelem = X
 StartUpDelay = 6.0
 
-[Setup]
+[Initial Setup]
 Type = Module
 Path = Support\SubPanel\Initialize\Initialize.vi
 Filename = AccelModel.stl
