--- a/Source/Utilities/Uploader/AeroQuadUploader.ini
+++ b/Source/Utilities/Uploader/AeroQuadUploader.ini
@@ -1,5 +1,5 @@
 [Configuration]
-Arduino IDE Path = "/C/Development/arduino-1.0"
+Arduino IDE Path = "/C/Program Files/arduino-1.0"
 Flight Software Path = "/Z/Ted On My Mac/GitHub/FlightSoftware"
 Debug = TRUE    
 
@@ -73,7 +73,7 @@ OSD_SYSTEM_MENU = On Screen Display - OSD System Menu,Enable OSD system menu
 
 [Valid Flight Options]
 AeroQuad_Mini = FlightAngleMARG,FlightAngleARG,HeadingMagHold,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,LASTCHANNEL 6
-AeroQuad_v18 = FlightAngleARG,RateModeOnly,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuad_v18 = FlightAngleMARG,FlightAngleARG,RateModeOnly,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,LASTCHANNEL 6
 AeroQuadMega_v2 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
 AeroQuad_v1 = FlightAngleARG,RateModeOnly,LASTCHANNEL 6
 AeroQuad_v1_IDG = FlightAngleARG,RateModeOnly,LASTCHANNEL 6
