added support to ProMini for auto upload of code

--- a/Source/Utilities/Uploader/AeroQuadUploader.ini
+++ b/Source/Utilities/Uploader/AeroQuadUploader.ini
@@ -72,7 +72,7 @@ feet = On Screen Display - Display Distance in Feet,Select to show distances in 
 OSD_SYSTEM_MENU = On Screen Display - OSD System Menu,Enable OSD system menu
 
 [Valid Flight Options]
-AeroQuad_Mini = FlightAngleMARG,FlightAngleARG,HeadingMagHold,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,LASTCHANNEL 6
+AeroQuad_Mini = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,LASTCHANNEL 6
 AeroQuad_v18 = FlightAngleMARG,FlightAngleARG,RateModeOnly,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,LASTCHANNEL 6
 AeroQuadMega_v2 = FlightAngleMARG,FlightAngleARG,HeadingMagHold,AltitudeHoldBaro,AltitudeHoldRangeFinder,RateModeOnly,BattMonitor,BattCellCount 0,BattCellCount 3,BattCellCount 4,BattMonitorAutoDescent,POWERED_BY_VIN,RemotePCReceiver,ReceiverPPM,ReceiverHWPPM,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_1,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_2,SKETCH_SERIAL_SUM_PPM SERIAL_SUM_PPM_3,WirelessTelemetry,BinaryWrite,BinaryWritePID,OpenlogBinaryWrite,LASTCHANNEL 6,LASTCHANNEL 8,CameraControl,OSD,PAL,AUTODETECT_VIDEO_STANDARD,ShowReticle,ShowFlightTimer,ShowAttitudeIndicator,ShowCallSign,ShowRSSI,feet,OSD_SYSTEM_MENU
 AeroQuad_v1 = FlightAngleARG,RateModeOnly,LASTCHANNEL 6
