updated transmitter cal to send individual cals per channel, helps with precision issue, updated makefile to use -arduino flags for auto DTR toggle, store previous front panel values

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -9,6 +9,8 @@ DebugServerEnabled = False
 DebugServerWaitOnLaunch = False
 useLocaleDecimalPt = False
 
+[Calibrations]
+
 [Configuration]
 SubPanel = 0    
 Parameter = 0    
