Debugged calibration recall, added folder check in Uploader

--- a/Source/Utilities/Uploader/AeroQuadUploader.ini
+++ b/Source/Utilities/Uploader/AeroQuadUploader.ini
@@ -104,6 +104,7 @@ AeroQuadMega_CHR6DM = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 
 APM_OP_CHR6DM = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
 
 [Current Settings]
-Flight Control Board = 0
-Com Port = <Select Com Port>
+Flight Control Board = 0    
+Com Port = "<Select Com Port>"
 Flight Configuration = 0    
+MCU = ""
