debugged recall of all calibrations at once

--- a/Source/Utilities/Uploader/AeroQuadUploader.ini
+++ b/Source/Utilities/Uploader/AeroQuadUploader.ini
@@ -1,7 +1,7 @@
 [Configuration]
 Arduino IDE Path =
 Flight Software Path =
-Debug = TRUE
+Debug = TRUE    
 Upload Delay = .75
 
 [Flight Board]
@@ -105,6 +105,6 @@ APM_OP_CHR6DM = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,Batt
 
 [Current Settings]
 Flight Control Board = 0    
-Com Port = <Select COM Port>
+Com Port =
 Flight Configuration = 0    
-MCU = 
+MCU =
