compatibility for R3 to Uploader and Configurator

--- a/Source/Utilities/Uploader/AeroQuadUploader.ini
+++ b/Source/Utilities/Uploader/AeroQuadUploader.ini
@@ -1,7 +1,7 @@
 [Configuration]
-Arduino IDE Path =
-Flight Software Path =
-Debug = TRUE    
+Arduino IDE Path = 
+Flight Software Path = 
+Debug = TRUE
 Upload Delay = .75
 
 [Flight Board]
@@ -104,7 +104,7 @@ AeroQuadMega_CHR6DM = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 
 APM_OP_CHR6DM = HeadingMagHold,AltitudeHoldBaro,BattMonitor,BattCellCount 3,BattMonitorAutoDescent,LASTCHANNEL 6
 
 [Current Settings]
-Flight Control Board = 0    
-Com Port =
+Flight Control Board = 0   
+Com Port = <Select COM Port>
 Flight Configuration = 0    
-MCU =
+MCU = 
