--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -12,7 +12,7 @@ useLocaleDecimalPt = False
 [Calibrations]
 
 [Configuration]
-SubPanel = 0    
+SubPanel = 3    
 Parameter = 0    
 COMport = "COM1"
 Timeout = "10.000000"
@@ -21,7 +21,6 @@ Version = #
 SW = e
 StopTelem = X
 StartUpDelay = 3.0
-
 
 [Initial Setup]
 Type = Module
@@ -68,7 +67,7 @@ Telemetry = s
 
 [Map Tracker]
 Type = Module
-Path = Support\SubPanel\Map\Map.vi
+Path = Support\SubPanel\Map\Map2.vi
 Telemetry = X
 
 [Motor Commands]
@@ -137,6 +136,17 @@ Altitude Smooth Factor = 0.0
 Z Dampening Proportional = 0.0
 Z Dampening Integral = 0.0
 Z Dampening Derivative = 0.0
+
+[GPS Position Hold]
+Type = Parameters
+Command = V
+Telemetry = v
+Roll Proportional = 0.0
+Roll Integral = 0.0
+Roll Derivative = 0.0
+Pitch Proportional = 0.0
+Pitch Integral = 0.0
+Pitch Derivative = 0.0
 
 [Miscellaneous Configuration]
 Type = Parameters
