Added DMS to DD conversions

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -12,7 +12,7 @@ useLocaleDecimalPt = False
 [Calibrations]
 
 [Configuration]
-SubPanel = 0    
+SubPanel = 3    
 Parameter = 4    
 COMport = "COM21"
 Timeout = "10.000000"
@@ -21,7 +21,6 @@ Version = #
 SW = e
 StopTelem = X
 StartUpDelay = 3.0
-
 
 [Initial Setup]
 Type = Module
@@ -66,7 +65,7 @@ Type = Module
 Path = Support\SubPanel\FlightStatus\FlightStatus.vi
 Telemetry = s
 
-[Map Tracker]
+[Waypoint Configuration]
 Type = Module
 Path = Support\SubPanel\Map\Map2.vi
 Telemetry = X
