preliminary GUI update for waypoint

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -12,15 +12,15 @@ useLocaleDecimalPt = False
 [Calibrations]
 
 [Configuration]
-SubPanel = 3    
-Parameter = 4    
-COMport = "COM21"
+SubPanel = 1   
+Parameter = 1    
+COMport = "COM1"
 Timeout = "10.000000"
 Baud = "115200"
 Version = #
 SW = e
 StopTelem = X
-StartUpDelay = 3.0
+StartUpDelay = 4.0
 
 [Initial Setup]
 Type = Module
@@ -52,10 +52,10 @@ MagCalResponse = m
 Type = Module
 Path = Support\SubPanel\Model\Model.vi
 Telemetry = r
-Y-Axis = "-30.285036"
+Y-Axis = "-30"
 Y-AxisMin = -50
 Y-AxisMax = 0
-Z-Axis = "15.083136"
+Z-Axis = "15"
 Z-AxisMin = 0
 Z-AxisMax = 50
 Filename = AeroQuad_Y6.stl
@@ -67,7 +67,7 @@ Telemetry = s
 
 [Waypoint Configuration]
 Type = Module
-Path = Support\SubPanel\Map\Map2.vi
+Path = Support\SubPanel\Map\Map.vi
 Telemetry = X
 
 [Motor Commands]
