waypooint uploader implemented, ready for test

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -12,7 +12,7 @@ useLocaleDecimalPt = False
 [Calibrations]
 
 [Configuration]
-SubPanel = 1   
+SubPanel = 0    
 Parameter = 1    
 COMport = "COM1"
 Timeout = "10.000000"
@@ -68,7 +68,8 @@ Telemetry = s
 [Waypoint Configuration]
 Type = Module
 Path = Support\SubPanel\Map\Map.vi
-Telemetry = X
+WaypointList = O
+WaypointVerify = o
 
 [Motor Commands]
 Type = Module
