--- a/Source/Support/SubPanel/Map/AeroQuad.cfg
+++ b/Source/Support/SubPanel/Map/AeroQuad.cfg
@@ -21,9 +21,9 @@
 
     google.maps.event.addDomListener(window, 'load', initialize);
 	function initialize() {
-        var latlng = new google.maps.LatLng(33.9425222, -118.4071611);
+        var latlng = new google.maps.LatLng(40.0, 12.0);
         var myOptions = {
-            zoom: 15,
+            zoom: 2,
             center: latlng,
             disableDefaultUI: false,
             mapTypeId: google.maps.MapTypeId.HYBRID
@@ -64,6 +64,11 @@
 		queryWaypointList();
 	}
 	
+	function setManualWaypoint(lat, lon) {
+		var position = new google.maps.LatLng(lat, lon);
+		setWaypoint(position);
+	}
+
 	function queryWaypointList() {
 		var waypointList = '';
 		for (i in waypoints) {
