--- a/Source/Support/SubPanel/Map/AeroQuad.cfg
+++ b/Source/Support/SubPanel/Map/AeroQuad.cfg
@@ -21,6 +21,7 @@
 
     google.maps.event.addDomListener(window, 'load', initialize);
 	function initialize() {
+		busy();
         var latlng = new google.maps.LatLng(40.0, 12.0);
         var myOptions = {
             zoom: 2,
@@ -50,9 +51,11 @@
         google.maps.event.addListener(map, 'click', function (event) {
             setWaypoint(event.latLng);
         });
+		notBusy();
 	}
 
 	function setWaypoint(location) {
+		busy();
 		var waypoint = new google.maps.Marker({
 		  position: location,
 		  map: map,
@@ -62,6 +65,7 @@
 		waypoints.push(waypoint);
 		path.getPath().push(location);
 		queryWaypointList();
+		notBusy();
 	}
 	
 	function setManualWaypoint(lat, lon) {
@@ -70,6 +74,7 @@
 	}
 
 	function queryWaypointList() {
+		busy();
 		var waypointList = '';
 		for (i in waypoints) {
 			waypointList = waypointList + waypoints[i].getPosition().toString();
@@ -77,23 +82,34 @@
 		waypointList = '{{' + waypointList + '}}';
 		eraseCookie('waypoints');
 		createCookie('waypoints', waypointList, 1);
+		notBusy();
 	}
 	
 	function clearMap() {
+		busy();
 		for (i in waypoints) {
 			waypoints[i].setMap(null);
 			path.getPath().pop();
 		}
 		waypoints.length = 0;
+		notBusy();
 	}
 
 	function clearLastWaypoint() {
+		busy();
 		if (waypoints.length) {
 			waypoints.pop().setMap(null);
 			path.getPath().pop();
 		}
+		notBusy();
 	}
 	
+	function centerMap(lat, lon, zoom) {
+		var position = new google.maps.LatLng(lat, lon);
+		map.setCenter(position);
+		map.setZoom(zoom);
+	}
+
 	function updateVehiclePosition(lat, lon, center) {
 		var position = new google.maps.LatLng(lat, lon);
 		vehicle.setPosition(position);
@@ -104,6 +120,14 @@
 	
 	function showVehicle(show) {
 		vehicle.setVisible(show);
+	}
+	
+	function busy() {
+		document.title = "busy";
+	}
+	
+	function notBusy() {
+		document.title = "not busy";
 	}
 		
 	function createCookie(name,value,days) {
