Added detection if waypoint max exceeded.

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -71,6 +71,7 @@ Type = Module
 Path = Support\SubPanel\Map\Map.vi
 WaypointList = O
 WaypointVerify = o
+WriteEEPROM = W
 
 [Motor Commands]
 Type = Module
