bug fix for single point waypoint altitude, updates for waypoint read/write robustness, fixed telemetry amp and test fix for lat/lon

--- a/Source/Support/SubPanel/Map/AeroQuad.cfg
+++ b/Source/Support/SubPanel/Map/AeroQuad.cfg
@@ -17,6 +17,7 @@
     var map;
 	var path;
 	var vehicle;
+	var showVehicle = 1;
 	var waypoints = [];
 
     google.maps.event.addDomListener(window, 'load', initialize);
@@ -111,6 +112,10 @@
 	}
 
 	function updateVehiclePosition(lat, lon, center) {
+		if (showVehicle) {
+			showVehicle = 0;
+			vehicle.setVisible(true);
+		}
 		var position = new google.maps.LatLng(lat, lon);
 		vehicle.setPosition(position);
 		if (center) {
