--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -12,15 +12,16 @@ useLocaleDecimalPt = False
 [Calibrations]
 
 [Configuration]
-SubPanel = 0    
-Parameter = 0    
-COMport = "COM1"
+SubPanel = 5    
+Parameter = 4    
+COMport = "COM18"
 Timeout = "10.000000"
 Baud = "115200"
 Version = #
 SW = e
 StopTelem = X
 StartUpDelay = 5.0
+
 
 [Initial Setup]
 Type = Module
@@ -149,6 +150,9 @@ Roll Derivative = 0.0
 Pitch Proportional = 0.0
 Pitch Integral = 0.0
 Pitch Derivative = 0.0
+Yaw Proportional = 0.0
+Yaw Integral = 0.0
+Yaw Derivative = 0.0
 
 [Miscellaneous Configuration]
 Type = Parameters
