Changes before UAVForge competition

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -12,16 +12,15 @@ useLocaleDecimalPt = False
 [Calibrations]
 
 [Configuration]
-SubPanel = 5    
-Parameter = 4    
-COMport = "COM18"
+SubPanel = 0    
+Parameter = 0    
+COMport = "COM1"
 Timeout = "10.000000"
 Baud = "115200"
 Version = #
 SW = e
 StopTelem = X
 StartUpDelay = 5.0
-
 
 [Initial Setup]
 Type = Module
@@ -66,7 +65,7 @@ Type = Module
 Path = Support\SubPanel\FlightStatus\FlightStatus.vi
 Telemetry = s
 
-[Waypoint Configuration]
+[Mission Planner]
 Type = Module
 Path = Support\SubPanel\Map\Map.vi
 WaypointList = O
