Working on making advanced/basic views

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -14,11 +14,11 @@ useLocaleDecimalPt = False
 [Configuration]
 SubPanel = 0    
 Parameter = 0    
-COMport = "COM1"
+COMport = "COM26"
 Timeout = "10.000000"
 Baud = "115200"
 Version = #
-SW = e
+SW = !
 StopTelem = X
 StartUpDelay = 5.0
 
@@ -42,8 +42,10 @@ TransmitterOffsetResponse = h
 ESCCalHigh = 1123.45
 ESCCalLow = 2123.45
 ESCCheck = 3123.45
-ESCCalOff = 4123.45
+ESCCalOff = 3123.45
 ESCTest = 5123.45
+ESCCalDelay = 4000
+ESCCalMinValue = 1050
 MagTelem = j
 MagCal = M
 MagCalResponse = m
@@ -52,10 +54,10 @@ MagCalResponse = m
 Type = Module
 Path = Support\SubPanel\Model\Model.vi
 Telemetry = r
-Y-Axis = "-30"
+Y-Axis = "-35.308056"
 Y-AxisMin = -50
 Y-AxisMax = 0
-Z-Axis = "15"
+Z-Axis = "18.009480"
 Z-AxisMin = 0
 Z-AxisMax = 50
 Filename = AeroQuad_Y6.stl
