added note for modem and SW version compatibility, added bootup delay control, cleaned up connection routine, removed error if parameter not found

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -10,17 +10,40 @@ DebugServerWaitOnLaunch = False
 useLocaleDecimalPt = False
 
 [Calibrations]
+K0.037199; = "4.079208;0.037390;12.693069;-0.038276;-15.653465;"
+M-2.000000; = "23.000000;11.000000;"
+H0; = "-433.289300;"
+G0; = "1.321004;"
+H1; = "-434.610304;"
+G1; = "1.321004;"
+H2; = "-433.289300;"
+G2; = "1.321004;"
+H3; = "-431.398417;"
+G3; = "1.319261;"
+H4; = "-429.512516;"
+G4; = "1.317523;"
+H5; = "-434.036939;"
+G5; = "1.319261;"
+H6; = "-429.512516;"
+G6; = "1.317523;"
+H7; = "0.000000;"
+G7; = "1.000000;"
+K0.001200; = "219.009901;-0.001189;157.089109;-0.001195;-239.178218;"
+K0.001188; = "125.787129;-0.001216;56.198020;-0.001182;198.029703;"
+K0.036729; = "2.381188;0.036912;14.554455;-0.038323;-13.762376;"
+M158.000000; = "105.000000;49.500000;"
+K0.001197; = "309.638614;-0.001206;-84.227723;-0.001191;782.767327;"
 
 [Configuration]
-SubPanel = 0    
+SubPanel = 2    
 Parameter = 0    
-COMport = "COM26"
+COMport = "COM5"
 Timeout = "10.000000"
 Baud = "115200"
 Version = #
 SW = !
 StopTelem = X
-StartUpDelay = 5.0
+StartUpDelay = ""
 
 [Initial Setup]
 Type = Module
@@ -83,7 +106,7 @@ Telemetry = 6
 Type = Module
 Path = Support\SubPanel\SerialMonitor\SerialMonitor.vi
 
-[Rate Mode]
+[Acrobatic (Rate) Mode]
 Type = Parameters
 Command = A
 Telemetry = a
@@ -94,7 +117,7 @@ Pitch Proportional = 0.0
 Pitch Integral = 0.0,
 Pitch Derivative = 0.0
 
-[Attitude Mode]
+[Stable (Attitude) Mode]
 Type = Parameters
 Command = B
 Telemetry = b
