preparing for beta 6 release

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -10,43 +10,17 @@ DebugServerWaitOnLaunch = False
 useLocaleDecimalPt = False
 
 [Calibrations]
-K0.037199; = "4.079208;0.037390;12.693069;-0.038276;-15.653465;"
-M-2.000000; = "23.000000;11.000000;"
-H0; = "-411.689962;"
-G0; = "1.270648;"
-H1; = "-411.689962;"
-G1; = "1.270648;"
-H2; = "-413.486005;"
-G2; = "1.272265;"
-H3; = "-411.689962;"
-G3; = "1.270648;"
-H4; = "-411.689962;"
-G4; = "1.270648;"
-H5; = "-411.689962;"
-G5; = "1.270648;"
-H6; = "-411.689962;"
-G6; = "1.270648;"
-H7; = "-411.689962;"
-G7; = "1.270648;"
-K0.001200; = "219.009901;-0.001189;157.089109;-0.001195;-239.178218;"
-K0.001188; = "125.787129;-0.001216;56.198020;-0.001182;198.029703;"
-K0.036729; = "2.381188;0.036912;14.554455;-0.038323;-13.762376;"
-M158.000000; = "105.000000;49.500000;"
-K0.001197; = "309.638614;-0.001206;-84.227723;-0.001191;782.767327;"
-K0.036677; = "1.648515;0.036928;14.752475;-0.038248;-15.975248;"
-M148.000000; = "100.500000;54.000000;"
-K0.001194; = "335.163366;-0.001201;-101.707921;-0.001190;910.658416;"
 
 [Configuration]
 SubPanel = 0    
 Parameter = 0    
-COMport = "COM5"
+COMport = "COM1"
 Timeout = "10.000000"
 Baud = "115200"
 Version = #
 SW = !
 StopTelem = X
-StartUpDelay = "0.000000"
+StartUpDelay = 5.0
 
 [Initial Setup]
 Type = Module
@@ -70,7 +44,7 @@ ESCCalLow = 2123.45
 ESCCheck = 3123.45
 ESCCalOff = 3123.45
 ESCTest = 5123.45
-ESCCalDelay = 4000
+ESCCalDelay = 2000
 ESCCalMinValue = 1050
 MagTelem = j
 MagCal = M
@@ -109,7 +83,7 @@ Telemetry = 6
 Type = Module
 Path = Support\SubPanel\SerialMonitor\SerialMonitor.vi
 
-[Acrobatic (Rate) Mode]
+[Rate Mode]
 Type = Parameters
 Command = A
 Telemetry = a
@@ -119,8 +93,9 @@ Roll Derivative = 0.0
 Pitch Proportional = 0.0
 Pitch Integral = 0.0,
 Pitch Derivative = 0.0
+Rotation Speed = 0.0
 
-[Stable (Attitude) Mode]
+[Attitude Mode]
 Type = Parameters
 Command = B
 Telemetry = b
@@ -185,7 +160,6 @@ Yaw Derivative = 0.0
 Type = Parameters
 Command = E
 Telemetry = e
-Gyro Smooth Factor = 0.0
 Voltage Reference = 5
 Minimum Armed Throttle = 1150
 
