fixed double file upload bug with Uploader, fixed Debug Logger serial bugs, optimized serial commands

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -11,6 +11,7 @@ useLocaleDecimalPt = False
 
 [Calibrations]
 
+
 [Configuration]
 SubPanel = 0    
 Parameter = 0    
@@ -20,7 +21,7 @@ Baud = "115200"
 Version = #
 SW = !
 StopTelem = X
-StartUpDelay = 5.0
+StartUpDelay = "0.000000"
 
 [Initial Setup]
 Type = Module
@@ -54,10 +55,10 @@ MagCalResponse = m
 Type = Module
 Path = Support\SubPanel\Model\Model.vi
 Telemetry = r
-Y-Axis = "-35.308056"
+Y-Axis = "-35.0"
 Y-AxisMin = -50
 Y-AxisMax = 0
-Z-Axis = "18.009480"
+Z-Axis = "18.0"
 Z-AxisMin = 0
 Z-AxisMax = 50
 Filename = AeroQuad_Y6.stl
