--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -173,7 +173,9 @@ Pitch Smoothing = 0.0
 Yaw Smoothing = 0.0
 Throttle Smoothing = 0.0
 Mode Smoothing = 0.0
-Aux Smoothing = 0.0
+Aux1 Smoothing = 0.0
+Aux2 Smoothing = 0.0
+Aux3 Smoothing = 0.0
 
 [Battery Monitor]
 Type = Parameters
@@ -233,6 +235,6 @@ Plot 2 = Pitch
 Plot 3 = Yaw
 Plot 4 = Throttle
 Plot 5 = Mode
-Plot 6 = Altitude
-Plot 7 = Aux 2
-Plot 8 = Aux 3
+Plot 6 = Aux1
+Plot 7 = Aux2
+Plot 8 = Aux3
