added auto reboot support after AQ32 board firmware uploaded, added GPS to Mission Planner without need for modem connection, fixed waypoint selection (broken from UABForge)

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -73,6 +73,8 @@ Path = Support\SubPanel\Map\Map.vi
 WaypointList = O
 WaypointVerify = o
 WriteEEPROM = W
+Telemetry = y
+StopTelem = X
 
 [Motor Commands]
 Type = Module
