added smoothing parameters and plots for channels 9 and 10

--- a/Source/AeroQuadConfigurator.ini
+++ b/Source/AeroQuadConfigurator.ini
@@ -176,6 +176,8 @@ Mode Smoothing = 0.0
 Aux1 Smoothing = 0.0
 Aux2 Smoothing = 0.0
 Aux3 Smoothing = 0.0
+Aux4 Smoothing = 0.0
+Aux5 Smoothing = 0.0
 
 [Battery Monitor]
 Type = Parameters
@@ -238,3 +240,5 @@ Plot 5 = Mode
 Plot 6 = Aux1
 Plot 7 = Aux2
 Plot 8 = Aux3
+Plot 9 = Aux4
+Plot 10 = Aux5
